[java jigsaw] building a module graph without using recursion IDEA-378170
GitOrigin-RevId: 3f842644792964d5cf625f57e273484947ef705e